@@ -27,6 +27,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Zodiac-Angle';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Zodiac-Angle';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Zodiac-Angle';
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Unicode::UTF8' => 0;
